<resources>
    <string name="app_name">Done List App</string>
    <string name="title_activity_done_list">DoneListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="update">Update</string>
    <string name="what_you_gonna_do">What you gonna do</string>
    <string name="user_name">Ander?</string>
    <string name="task">Task</string>
    <string name="tambah">Tambah</string>
    <string name="activity_done">Activity Done</string>
    <string name="hi_user_name">Hi Ander!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="nama">Nama</string>
    <string name="_8942">⋮</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
</resources>